@@ -1,6 +1,10 @@
+
+if !WITHOUT_BIGLOO
+
 SUBDIRS = src tests
 
 cinstall:
 	$(MAKE) install
 
 
+endif
