@@ -71,6 +71,6 @@ This <span class="sc">Html</span> page has been produced by
 <a href="http://www.inria.fr/mimosa/fp/Skribe" class="http">Skribe</a>.
 <br/>
 Last update <em id='it1080'
->Tue May 15 10:56:49 2007</em>.</font></p></div>
+>Wed May 16 16:14:55 2007</em>.</font></p></div>
 </body>
 </html>
