@@ -1,2 +1,2 @@
-(define *project-version* "2.1.7")
+(define *project-version* "2.1.8")
 (define *project-example-ftp-site* "./web-home/examples")
