@@ -64,7 +64,7 @@ Todd Dukes</i></font>
 <td align="left" valign="top" class="skribe-body"><div class="skribe-body">
 <br/><p id='paragraph1054'
 >This is preliminary user documentation for RNumber.</p><p id='paragraph1055'
->This document desribes version 2.1.7 of RNumber.</p><p id='paragraph1056'
+>This document desribes version 2.1.8 of RNumber.</p><p id='paragraph1056'
 >The rnumber library provides two different areas of
 functionality. There are large integers, referred to as rnumber's, and
 there are the random sequences.</p></div></td>
@@ -76,6 +76,6 @@ This <span class="sc">Html</span> page has been produced by
 <a href="http://www.inria.fr/mimosa/fp/Skribe" class="http">Skribe</a>.
 <br/>
 Last update <em id='it3153'
->Tue May 15 10:56:49 2007</em>.</font></p></div>
+>Wed May 16 16:14:55 2007</em>.</font></p></div>
 </body>
 </html>
