@@ -1,3 +1,8 @@
+2007-05-17  Brian Kahne  <bkahne@freescale.com>
+
+	* Fixed configure and various Makefiles so that if skribe is not
+	present the documentation will not be built.
+
 2007-05-15  Brian Kahne  <bkahne@freescale.com>
 
 	* Perl bindings work on x86_64 now:  -fPIC is added in explicitly
